--- a/internal/codegen/golang/templates/ydb-go-sdk/queryCode.tmpl
+++ b/internal/codegen/golang/templates/ydb-go-sdk/queryCode.tmpl
@@ -6,8 +6,8 @@ const {{.ConstantName}} = {{$.Q}}-- name: {{.MethodName}} {{.Cmd}}
 {{$.Q}}
 
 {{if .Arg.EmitStruct}}
-type {{.Arg.Type}} struct { {{- range .Arg.UniqueFields}}
-  {{.Name}} {{.Type}} {{if .Tag}}{{$.Q}}{{.Tag}}{{$.Q}}{{end}}
+type {{.Arg.Type}} struct { {{- range .Arg.YDBUniqueFieldsWithComments}}
+  {{.Name}} {{.Type}} {{if .Tag}}{{$.Q}}{{.Tag}}{{$.Q}}{{end}}{{if .Comment}} {{.Comment}}{{end}}
   {{- end}}
 }
 {{end}}
@@ -22,13 +22,27 @@ type {{.Ret.Type}} struct { {{- range .Ret.Struct.Fields}}
 {{if eq .Cmd ":one"}}
 {{range .Comments}}//{{.}}
 {{end -}}
-func (q *Queries) {{.MethodName}}(ctx context.Context, {{if $.EmitMethodsWithDBArgument}}db DBTX, {{end}}{{if not .Arg.IsEmpty}}{{.Arg.Pair}}, {{end}}opts ...query.ExecuteOption) ({{.Ret.DefineType}}, error) {
+{{if .Arg.YDBHasComplexContainers}}
+func (q *Queries) {{.MethodName}}(ctx context.Context, {{if $.EmitMethodsWithDBArgument}}db DBTX, {{end}}{{if .Arg.YDBPair}}{{.Arg.YDBPair}}, {{end}}params ydb.Params, opts ...query.ExecuteOption) ({{.Ret.DefineType}}, error) {
+{{else}}
+func (q *Queries) {{.MethodName}}(ctx context.Context, {{if $.EmitMethodsWithDBArgument}}db DBTX, {{end}}{{if .Arg.YDBPair}}{{.Arg.YDBPair}}, {{end}}opts ...query.ExecuteOption) ({{.Ret.DefineType}}, error) {
+{{end -}}
     {{- $dbArg := "q.db" }}{{- if $.EmitMethodsWithDBArgument }}{{- $dbArg = "db" }}{{- end -}}
-    {{- if .Arg.IsEmpty }}
+    {{- if .Arg.IsEmpty -}}
     row, err := {{$dbArg}}.QueryRow(ctx, {{.ConstantName}}, opts...)
-    {{- else }}
+    {{- else -}}
+    {{- .Arg.YDBParamsBuilder}}
+    {{- if .Arg.YDBHasComplexContainers }}
+    for name, value := range params.Range() {
+        parameters = parameters.Param(name).Any(value)
+    }
+    {{- end }}
     row, err := {{$dbArg}}.QueryRow(ctx, {{.ConstantName}}, 
-        append(opts, {{.Arg.YDBParamsBuilder}})...,
+        {{- if .Arg.YDBHasParams }}
+        append(opts, query.WithParameters(parameters.Build()))...,
+        {{- else }}
+        opts...,
+        {{- end }}
     )
     {{- end }}
     {{- if or (ne .Arg.Pair .Ret.Pair) (ne .Arg.DefineType .Ret.DefineType) }}
@@ -58,13 +72,27 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{if $.EmitMethodsWithDBA
 {{if eq .Cmd ":many"}}
 {{range .Comments}}//{{.}}
 {{end -}}
-func (q *Queries) {{.MethodName}}(ctx context.Context, {{if $.EmitMethodsWithDBArgument}}db DBTX, {{end}}{{if not .Arg.IsEmpty}}{{.Arg.Pair}}, {{end}}opts ...query.ExecuteOption) ([]{{.Ret.DefineType}}, error) {
+{{if .Arg.YDBHasComplexContainers}}
+func (q *Queries) {{.MethodName}}(ctx context.Context, {{if $.EmitMethodsWithDBArgument}}db DBTX, {{end}}{{if .Arg.YDBPair}}{{.Arg.YDBPair}}, {{end}}params ydb.Params, opts ...query.ExecuteOption) ([]{{.Ret.DefineType}}, error) {
+{{else}}
+func (q *Queries) {{.MethodName}}(ctx context.Context, {{if $.EmitMethodsWithDBArgument}}db DBTX, {{end}}{{if .Arg.YDBPair}}{{.Arg.YDBPair}}, {{end}}opts ...query.ExecuteOption) ([]{{.Ret.DefineType}}, error) {
+{{end}}
     {{- $dbArg := "q.db" }}{{- if $.EmitMethodsWithDBArgument }}{{- $dbArg = "db" }}{{- end -}}
-    {{- if .Arg.IsEmpty }}
+    {{- if .Arg.IsEmpty -}}
     result, err := {{$dbArg}}.QueryResultSet(ctx, {{.ConstantName}}, opts...)
-    {{- else }}
+    {{- else -}}
+    {{- .Arg.YDBParamsBuilder}}
+    {{- if .Arg.YDBHasComplexContainers }}
+    for name, value := range params.Range() {
+        parameters = parameters.Param(name).Any(value)
+    }
+    {{- end }}
     result, err := {{$dbArg}}.QueryResultSet(ctx, {{.ConstantName}}, 
-        append(opts, {{.Arg.YDBParamsBuilder}})...,
+        {{- if .Arg.YDBHasParams }}
+        append(opts, query.WithParameters(parameters.Build()))...,
+        {{- else }}
+        opts...,
+        {{- end }}
     )
     {{- end }}
     if err != nil {
@@ -111,13 +139,27 @@ func (q *Queries) {{.MethodName}}(ctx context.Context, {{if $.EmitMethodsWithDBA
 {{if eq .Cmd ":exec"}}
 {{range .Comments}}//{{.}}
 {{end -}}
-func (q *Queries) {{.MethodName}}(ctx context.Context, {{if $.EmitMethodsWithDBArgument}}db DBTX, {{end}}{{if not .Arg.IsEmpty}}{{.Arg.Pair}}, {{end}}opts ...query.ExecuteOption) error {
+{{if .Arg.YDBHasComplexContainers}}
+func (q *Queries) {{.MethodName}}(ctx context.Context, {{if $.EmitMethodsWithDBArgument}}db DBTX, {{end}}{{if .Arg.YDBPair}}{{.Arg.YDBPair}}, {{end}}params ydb.Params, opts ...query.ExecuteOption) error {
+{{else}}
+func (q *Queries) {{.MethodName}}(ctx context.Context, {{if $.EmitMethodsWithDBArgument}}db DBTX, {{end}}{{if .Arg.YDBPair}}{{.Arg.YDBPair}}, {{end}}opts ...query.ExecuteOption) error {
+{{end -}}
     {{- $dbArg := "q.db" }}{{- if $.EmitMethodsWithDBArgument }}{{- $dbArg = "db" }}{{- end -}}
-    {{- if .Arg.IsEmpty }}
+    {{- if .Arg.IsEmpty -}}
     err := {{$dbArg}}.Exec(ctx, {{.ConstantName}}, opts...)
-    {{- else }}
+    {{- else -}}
+    {{- .Arg.YDBParamsBuilder}}
+    {{- if .Arg.YDBHasComplexContainers }}
+    for name, value := range params.Range() {
+        parameters = parameters.Param(name).Any(value)
+    }
+    {{- end }}
     err := {{$dbArg}}.Exec(ctx, {{.ConstantName}}, 
-        append(opts, {{.Arg.YDBParamsBuilder}})...,
+        {{- if .Arg.YDBHasParams }}
+        append(opts, query.WithParameters(parameters.Build()))...,
+        {{- else }}
+        opts...,
+        {{- end }}
     )
     {{- end }}
     if err != nil {
